# fudel

./: Makefile  README.md  fudel.cpp  fudel.h  gui.cpp  gui.h  meson.build
